--- a/mainPage.html
+++ b/mainPage.html
@@ -52,14 +52,14 @@
                 "prix": 899.99,
                 "description": "Ordinateur portable performant avec 16 Go de RAM et 512 Go de SSD.",
                 "categorie": "Électronique",
-                "image": "images\Definition-dun-PC-portable-14-pouces.jpg"
+                "image": "images/product_img01_esrb.png"
             },
             {
                 "nom": "Smartphone",
                 "prix": 699.99,
                 "description": "Smartphone avec écran AMOLED et 128 Go de stockage.",
                 "categorie": "Électronique",
-                "image": "images\purepng.com-asus-smartphonepersonal-computersmartphonemobile-operating-systemcellular-phonephilipsandroid-1701528390817qbpuc.png"
+                "image": "images\Animal-Crossing-New-Horizons---Nintendo-Switch.jpg"
             },
             {
                 "nom": "Casque Audio",
