small changes to footer

--- a/newAccueil.html
+++ b/newAccueil.html
@@ -134,28 +134,16 @@
             </div>
   
             <div>
-              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Order & Purchases</h6>
+              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Follow Me</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Order Status</a>
-                </li>
-                <li>
                   <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Track Your Order</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Purchase History</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Returns & Refunds</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Payment Methods</a>
                 </li>
               </ul>
             </div>
   
             <div>
-              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Support & Services</h6>
+              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Contact Me</h6>
               <ul class="space-y-3">
                 <li>
                   <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Support</a>
