--- a/newAccueil.html
+++ b/newAccueil.html
@@ -146,40 +146,22 @@
               <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Contact Me</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Support</a>
+                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">MyRealAdresse@gmal.com</a>
                 </li>
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">FAQs</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Service Centers</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Warranty Information</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Product Manuals</a>
+                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">About Me</a>
                 </li>
               </ul>
             </div>
   
             <div>
-              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Partnerships</h6>
+              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Policy</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Partner With Us</a>
+                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Terms & Conditions</a>
                 </li>
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Become a Supplier</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Affiliate Program</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Collaboration Opportunities</a>
-                </li>
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Sponsorship Requests</a>
+                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Legality</a>
                 </li>
               </ul>
             </div>
@@ -193,13 +175,6 @@
             <img class="block h-8 w-auto dark:hidden" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full.svg" alt="" />
             <img class="hidden h-8 w-auto dark:block" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full-dark.svg" alt="" />
           </a>
-  
-          <ul class="flex flex-wrap items-center gap-4 text-sm text-gray-900 dark:text-white xl:justify-center">
-            <li><a href="#" title="" class="font-medium hover:underline"> Flowbite Express </a></li>
-            <li><a href="#" title="" class="font-medium hover:underline"> Legal Notice </a></li>
-            <li><a href="#" title="" class="font-medium hover:underline"> Product Listing Policy </a></li>
-            <li><a href="#" title="" class="font-medium hover:underline"> Terms of Use </a></li>
-          </ul>
   
           <p class="text-sm text-gray-500 dark:text-gray-400">© 2024 <a href="#" class="hover:underline">Flowbite</a>, Inc. All rights reserved.</p>
         </div>
