--- a/genshin.html
+++ b/genshin.html
@@ -16,38 +16,38 @@
 
                 <div class="flex items-center space-x-8">
                     <div class="shrink-0">
-                        <a href="#" class="">
+                        <a href="#" title="" class="">
                             <img class="block w-auto h-8 dark:hidden" src="images\sticker342.jpg" alt="">
                         </a>
                     </div>
 
                     <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
                         <li>
-                            <a href="newAccueil.html"
+                            <a href="newAccueil.html" title=""
                                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Home
                             </a>
                         </li>
                         <li class="shrink-0">
-                            <a href="arknights.html"
+                            <a href="arknights.html" title=""
                                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
                                 Arknights
                             </a>
                         </li>
                         <li class="shrink-0">
-                            <a href="hsr.html"
+                            <a href="hsr.html" title=""
                                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Honkai: Star Rail
                             </a>
                         </li>
                         <li class="shrink-0">
-                            <a href="genshin.html"
-                                class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                            <a href="genshin.html" title=""
+                                class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
                                 Genshin Impact
                             </a>
                         </li>
                         <li class="shrink-0">
-                            <a href="pgr.html"
+                            <a href="pgr.html" title=""
                                 class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Punishing: Gray Raven
                             </a>
@@ -95,7 +95,7 @@
                     <div class="h-56 w-full">
                         <a href="#">
                             <img class="mx-auto h-full dark:hidden"
-                                src="images\tw-11134207-7qul6-lfcqy800cnoq63_tn.jpg" alt=""/>
+                                src="images\genshin_impact_dominos_goodies_1694504694_e5294cab_progressive.jpg" alt=""/>
                         </a>
                     </div>
                     <div class="pt-6">
@@ -105,7 +105,7 @@
                             Surface Pro, Copilot+ PC, 13 Inch</a>
 
                         <div class="mt-4 flex items-center justify-between gap-4">
-                            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">$5.99</p>
+                            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">$899</p>
 
                             <button type="button"
                                 class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4  focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
