--- a/newAccueil.html
+++ b/newAccueil.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="bg-white dark:bg-gray-800 antialiased">
+  <nav class="bg-white dark:bg-gray-800 antialiased sticky top-0">
     <div class="max-w-screen-xl px-4 mx-auto 2xl:px-0 py-4">
       <div class="flex items-center justify-between">
 
@@ -18,41 +18,39 @@
           <div class="shrink-0">
             <a href="#" title="" class="">
               <img class="block w-auto h-8 dark:hidden"
-                src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full.svg" alt="">
-              <img class="hidden w-auto h-8 dark:block"
-                src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full-dark.svg" alt="">
+                src="images\sticker342.jpg" alt="">
             </a>
           </div>
 
           <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
             <li>
-              <a href="#" title=""
-                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+              <a href="#"
+                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
                 Home
               </a>
             </li>
             <li class="shrink-0">
-              <a href="#" title=""
+              <a href="arknights.html"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                Best Sellers
+                Arknights
               </a>
             </li>
             <li class="shrink-0">
-              <a href="#" title=""
+              <a href="hsr.html"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                Gift Ideas
+                Honkai: Star Rail
               </a>
             </li>
             <li class="shrink-0">
-              <a href="#" title=""
+              <a href="genshin.html"
                 class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                Today's Deals
+                Genshin Impact
               </a>
             </li>
             <li class="shrink-0">
-              <a href="#" title=""
+              <a href="pgr.html"
                 class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                Sell
+                Punishing: Gray Raven
               </a>
             </li>
           </ul>
@@ -109,26 +107,10 @@
         <div class="items-start gap-6 md:gap-8 lg:flex 2xl:gap-24">
           <div class="grid min-w-0 flex-1 grid-cols-2 gap-6 md:gap-8 xl:grid-cols-4">
             <div>
-              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Company</h6>
+              <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Facts</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> About </a>
-                </li>
-  
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> Premium </a>
-                </li>
-  
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> Blog </a>
-                </li>
-  
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> Affiliate Program </a>
-                </li>
-  
-                <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> Get Coupon </a>
+                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">This Website</a>
                 </li>
               </ul>
             </div>
@@ -137,7 +119,7 @@
               <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Follow Me</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Track Your Order</a>
+                  <a href="https://github.com/Tevin01" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">GitHub</a>
                 </li>
               </ul>
             </div>
@@ -172,11 +154,10 @@
       <div class="py-6 md:py-8">
         <div class="gap-4 space-y-5 xl:flex xl:items-center xl:justify-between xl:space-y-0">
           <a href="#" title="" class="block">
-            <img class="block h-8 w-auto dark:hidden" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full.svg" alt="" />
-            <img class="hidden h-8 w-auto dark:block" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full-dark.svg" alt="" />
+            <img class="block h-8 w-auto dark:hidden" src="images\sticker342.jpg" alt="" />
           </a>
   
-          <p class="text-sm text-gray-500 dark:text-gray-400">© 2024 <a href="#" class="hover:underline">Flowbite</a>, Inc. All rights reserved.</p>
+          <p class="text-sm text-gray-500 dark:text-gray-400">© 2024 <a href="#" class="hover:underline">Tevin Eliya Bofona</a></p>
         </div>
       </div>
     </div>
