--- a/pgr.html
+++ b/pgr.html
@@ -16,7 +16,7 @@
 
                 <div class="flex items-center space-x-8">
                     <div class="shrink-0">
-                        <a href="#" class="">
+                        <a href="#" title="" class="">
                             <img class="block w-auto h-8 dark:hidden" src="images\sticker342.jpg" alt="">
                         </a>
                     </div>
@@ -30,7 +30,7 @@
                         </li>
                         <li class="shrink-0">
                             <a href="arknights.html"
-                                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
+                                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Arknights
                             </a>
                         </li>
@@ -48,7 +48,7 @@
                         </li>
                         <li class="shrink-0">
                             <a href="pgr.html"
-                                class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                                class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
                                 Punishing: Gray Raven
                             </a>
                         </li>
@@ -95,7 +95,7 @@
                     <div class="h-56 w-full">
                         <a href="#">
                             <img class="mx-auto h-full dark:hidden"
-                                src="images\tw-11134207-7qul6-lfcqy800cnoq63_tn.jpg" alt=""/>
+                                src="images\00ac77e602abdbd9e50719cd45ae2d07.jpg" alt=""/>
                         </a>
                     </div>
                     <div class="pt-6">
@@ -105,7 +105,7 @@
                             Surface Pro, Copilot+ PC, 13 Inch</a>
 
                         <div class="mt-4 flex items-center justify-between gap-4">
-                            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">$5.99</p>
+                            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">$899</p>
 
                             <button type="button"
                                 class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4  focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
