Tommorrow or day after

--- a/newAccueil.html
+++ b/newAccueil.html
@@ -30,25 +30,25 @@
               </a>
             </li>
             <li class="shrink-0">
-              <a href="arknights.html"
+              <a href="sections\arknights.html"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                 Arknights
               </a>
             </li>
             <li class="shrink-0">
-              <a href="hsr.html"
+              <a href="sections\hsr.html"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                 Honkai: Star Rail
               </a>
             </li>
             <li class="shrink-0">
-              <a href="genshin.html"
+              <a href="sections\genshin.html"
                 class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                 Genshin Impact
               </a>
             </li>
             <li class="shrink-0">
-              <a href="pgr.html"
+              <a href="sections\pgr.html"
                 class="text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                 Punishing: Gray Raven
               </a>
