--- a/sections/arknights.html
+++ b/sections/arknights.html
@@ -23,7 +23,7 @@
 
                     <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
                         <li>
-                            <a href="newAccueil.html"
+                            <a href="../newAccueil.html"
                                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Home
                             </a>
