--- a/sections/genshin.html
+++ b/sections/genshin.html
@@ -23,14 +23,14 @@
 
                     <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
                         <li>
-                            <a href="newAccueil.html" title=""
+                            <a href="../newAccueil.html" title=""
                                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Home
                             </a>
                         </li>
                         <li class="shrink-0">
                             <a href="arknights.html" title=""
-                                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500 underline">
+                                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                                 Arknights
                             </a>
                         </li>
